<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LunchList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="addr">Address:</string>
    <string name="save">SAVE</string>

    <string name="type">Type:</string>
    <string name="take_out">Take out</string>
    <string name="sit_down">Sit down</string>
    <string name="delivery">Delivery</string>

</resources>
