<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:stretchColumns="1"
    tools:context=".LunchList">

    <TableRow>
        <TextView
            android:text="@string/name" />
        <EditText
            android:id="@+id/name" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/addr" />
        <EditText
            android:id="@+id/addr" />
    </TableRow>

    <TableRow android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView android:text="@string/type"
            android:layout_height="wrap_content" />
        <RadioGroup android:id="@+id/types">
            <RadioButton
                android:id="@+id/take_out"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_out"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/sit_down"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sit_down"/>
            <RadioButton
                android:id="@+id/delivery"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery"/>
        </RadioGroup>
    </TableRow>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin" />


</TableLayout>
